# CMake

demo/v1/: CMakeLists.txt  add.cpp  sub.cpp
demo/v1/include/: head.h
demo/v1/src/: add.cpp  div.cpp
demo/v2/: CMakeLists.txt  main.cpp
demo/v2/src/: mult.cpp
demo/v3/: CMakeLists.txt
demo/v4/: CMakeLists.txt  main.cpp
